--- a/Collage.html
+++ b/Collage.html
@@ -89,16 +89,21 @@
         <li><a href="courses.html">Courses</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="Collage.html">College</a></li>
+        <li><a href="https://www.dropbox.com/scl/fi/svccn4jy14oq4hwxg1v1a/Shiv.apk?rlkey=vsti9l3zpoibsm0ys4z53seie&st=q3n4zc18&dl=1">APP</a></li>
         <li><a href="Photo.html">Photo</a></li>
         <li><a href="AI.html">AI</a></li>
-        <li><a href="https://www.dropbox.com/scl/fi/ig6i722syr952t8ixpfwd/Shiv_Computer.apk?rlkey=ddhb0dy1kxenl2vdztb28i7j6&st=cc4jg1e7&dl=1">APP</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <h2>Important Links</h2>
-    <div class="social-links">   
+    <div class="social-links">
+      <a href="https://www.facebook.com/profile.php?id=100093146240602">📘 Facebook</a>
+      <a href="https://www.instagram.com/ceshiv.kumar/">📷 Instagram</a>
+      <a href="https://x.com/ceshiv">🐦 Twitter (X)</a>
+      <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">LinkdIn</a>
+      <a href="https://youtube.com/@ershivkumar?si=aAvVxJnHXo2Ur1b_">📹 YouTube</a>
       <a href="mailto:ceshiv.1989@8gync0.onmicrosoft.com">📧 Email Us</a>
       <a href="https://sites.google.com/view/shivcomputer/home">🌐SHIV COMPUTER</a>
       <a href="https://preregistration.upmsp.edu.in/">कक्षा 09 और 11 रजिस्ट्रेशन</a>
@@ -110,13 +115,12 @@
       <a href="https://www.lkouniv.ac.in/">Lucknow University</a>
       <a href="https://scholarship.up.gov.in//">UP Scholarship</a>
       <a href="recipt.html">Genrate Recipt</a>
-      <a href="clist.html">Creat Correction List</a>
       <a href="dob.html">DOB Certificate</a>
+      <a href="clist.html">Creat Correction List</a>
       <a href="https://shvr.education.gov.in/">SHVR</a>
       <a href="https://inspireawards-dst.gov.in//">Inspire MANAK</a>
       <a href="https://www.rte25.upsdc.gov.in/Index.aspx">RTE</a>
       <a href="https://pfms.nic.in/static/NewLayoutCommonContent.aspx?RequestPagename=static/KnowYourPayment_new.aspx">भुगतान स्थिति</a>
-      <a href="https://ecoclubs.education.gov.in/">Mission Life</a>
     </div>
   </main>
 
@@ -198,14 +202,6 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
