--- a/account.html
+++ b/account.html
@@ -121,9 +121,9 @@ header h1, header h3 {
     <div class="social-links">
       <a href="fimng2.html">Accounting</a>
       <a href="fee.html">Fee Mnaegment</a>
-      <a href="fimng.html">Accounting</a>
-      <a href="fimng.html">Accounting</a>
-      <a href="accounting.html">Ledger</a>
+      <a href="calc.html">Marks %</a>
+      <a href="calculator.html">Caculator</a>
+	  <a href="accounting.html">Ledeger</a>
     </div>
   </main>
 </body>
@@ -213,6 +213,4 @@ header h1, header h3 {
     }
   </style>
 </body>
-
 </html>
-
