--- a/gamecenter.html
+++ b/gamecenter.html
@@ -46,7 +46,7 @@ header h1, header h3 {
     }
 
     nav ul li a:hover {
-      background-color: #ff0000;
+      background-color: #C309ED;
       border-radius: 9px;
     }
 
@@ -63,7 +63,7 @@ header h1, header h3 {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
-      max-width: 2000px;
+      max-width: Autopx;
       margin: auto;
       padding: 10px;
     }
@@ -74,14 +74,14 @@ header h1, header h3 {
       padding: 15px;
       background: #ffffff;
       border: 2px solid #0072ff;
-      border-radius: 12px;
+      border-radius: 28px;
       color: #0072ff;
       font-weight: bold;
       transition: all 0.5s ease;
     }
 
     .social-links a:hover {
-      background: #facade;
+      background: #C309ED;
       color: #123524;
     }
   </style>
@@ -92,7 +92,7 @@ header h1, header h3 {
     <img src="logo.png" alt="Logo" class="logo">
     <div class="site-info" style="margin-left: 15px;">
       <h1 style="margin:0;">SHIV COMPUTER</h1>
-      <h3 style="margin:0;">KARANPUR SURATGANJ BARABANKI</h3>
+      <h3 style="margin:0;"></h3>
     </div>
   </div>
   <nav>
@@ -107,63 +107,31 @@ header h1, header h3 {
       <li><a href="AI.html">AI</a></li>
       <li><a href="gamecenter.html">Game Center</a></li>
       <li><a href="account.html">Accounting</a></li>
-      <li><a href="htedit.html">Code Edit Live</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
     </ul>
   </nav>
 </header>
-  
   </style>
 </head>
 <body>
-
-
   <main>
-    <h2>AI TOOLS</h2>
+    <h2>Game Center</h2>
     <div class="social-links">
-      <a href="https://chatgpt.com/">Chat GPT</a>
-      <a href="https://www.youtube.com/channel/UC6dXjXutQ216k9TXIEDKeOA">Home</a>
-      <a href="https://www.perplexity.ai/">Perplexity</a>
-      <a href="https://grok.com/">Grok</a>
-      <a href="https://claude.ai/new">Claude</a>
-      <a href="https://www.imagine.art/dashboard/image">Imagine</a>
-      <a href="https://www.meta.ai/">Meta AI</a>
-      <a href="https://suno.com/create?signup_source=splashpage&referrer=%2Fhome&redirected_from=signin">Suno Ai</a>
-      <a href="https://gemini.google.com/app?is_sa=1&is_sa=1&android-min-version=301356232&ios-min-version=322.0&campaign_id=bkws&utm_source=sem&utm_source=google&utm_medium=paid-media&utm_medium=cpc&utm_campaign=bkws&utm_campaign=2024hiIN_gemfeb&pt=9008&mt=8&ct=p-growth-sem-bkws&gclsrc=aw.ds&gad_source=1&gad_campaignid=20437330548&gbraid=0AAAAApk5BhlPB8WOycrC-ydpBa8MnRvXj&gclid=Cj0KCQjwwZDFBhCpARIsAB95qO1oAzcFH_2HH60QZdV8az1acovuOSiWb4T_h8EcT2-xa93jxhATVqkaAtr1EALw_wcB">Gemini</a>
-      <a href="https://www.ck12.org/student/">CK 12</a>
-      <a href="https://api.whatsapp.com/send/?phone=917204228312&text&type=phone_number&app_absent=0">CK 12 Whatsapp</a>
-      <a href="calculator.html">Calculator</a>
-      <a href="calc.html">Percentage Cal</a>
       <a href="server.html">Error</a>
-      <a href="invoice.html">Genrate Invoice</a>
       <a href="chatcode.html">Help</a>
       <a href="age.html">उम्र सुने</a>
-      <a href="scan.html">ImageINFO</a>
       <a href="sun.html">Flower Animation</a>
-      <a href="data.html">Creat ID Card</a>
-      <a href="qrgen.html">QR Genrate</a>
-      <a href="UPID to QR .html">Acept Payment</a>
-      <a href="https://www.scribd.com/document/935123135/DSC-Guide-FULL-for-Explorer-8090155304">DSC SETUP</a>
-      <a href="exam.html">Online Test</a>
       <a href="scroll2.html">Make Text Scroll</a>
-      <a href="iedit.html">Picture Maneger</a>
       <a href="final.html">Costom Bounce</a>
-      <a href="fimng2.html">Accounting</a>
-      <a href="count.html">Live Counting</a>
-      <a href="coun.html">Live Counting</a>
       <a href="carg.html">Super Car</a>
-      <a href="pdftojpeg.html">Pdf to JPEG</a>
-      <a href="imagetopdf.html">Image to PDF</a>
-      <a href="pdfredu.html">PDF Reducer</a>
-      <a href="gst.html">GST Calc</a>
       <a href="candy2.html">Candy Drpo</a>
       <a href="fpajal.html">Fruit Puzale</a>
-      <a href="voiceinput.html">Voice Input Tool</a>
-	  <a href="gltime.html">Get Local time</a>
     </div>
   </main>
+
 </body>
 </html>
+  </main>
   <footer>
     <div class="footer-container">
       <p>&copy; 2025 Shiv Computer. All rights reserved.</p>
