--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
     }
 
     .logo {
-      height: 60px;
-      width: auto;
+      height: 70px;
+      width: 120PX;
+      position: relative;
     }
 
     h1 {
       margin: 0;
-      font-size: 25px;
+      font-size: 40px;
       color: yellow;
       text-decoration: none;
       font-weight: bold;
@@ -217,7 +218,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      z-index: -3;
       overflow: hidden;
     }
 
@@ -272,6 +273,14 @@
       left: 10%;
       animation-delay: 10s;
     }
+
+    .block:nth-child(7) {
+      background: #1F0596;
+      top: 70%;
+      left: 10%;
+      animation-delay: 12s;
+    }
+
 
     @keyframes float {
       0% {
@@ -429,7 +438,7 @@
         <li><a href="Collage.html">College</a></li>
         <li><a href="Photo.html">Photo</a></li>
         <li><a href="AI.html">AI</a></li>
-        <li><a href="https://www.dropbox.com/scl/fi/ig6i722syr952t8ixpfwd/Shiv_Computer.apk?rlkey=ddhb0dy1kxenl2vdztb28i7j6&st=cc4jg1e7&dl=1"</a></li>
+        <li><a href="gamecenter.html">Game Center</a></li>
       </ul>
     </nav>
   </header>
@@ -447,7 +456,7 @@
     
     <h2>Welcome to SHIV COMPUTER</h2>
     <div class="typewriter-container" id="typewriter"></div>
-    <button class="pulse-button">| For Explore Open Menu |</button>
+    <button class="pulse-button"> For Explore Open Menu </button>
   </main>
 
   <!-- FOOTER - Original maintain kiya -->
