--- a/AI.html
+++ b/AI.html
@@ -107,7 +107,8 @@ header h1, header h3 {
       <li><a href="AI.html">AI</a></li>
       <li><a href="gamecenter.html">Game Center</a></li>
       <li><a href="account.html">Accounting</a></li>
-      <li><a href="htedit.html">Code Edit Live</a></li>
+      <li><a href="htedit.html">Code Edit 1</a></li>
+	  <li><a href="codeedit.html">Code Edit 2</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
     </ul>
   </nav>
