--- a/AI.html
+++ b/AI.html
@@ -161,6 +161,7 @@ header h1, header h3 {
       <a href="fpajal.html">Fruit Puzale</a>
       <a href="voiceinput.html">Voice Input Tool</a>
 	  <a href="gltime.html">Get Local time</a>
+	  <a href="tre.html">Bot Trenning</a>
     </div>
   </main>
 </body>
@@ -250,3 +251,4 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
