--- a/AI.html
+++ b/AI.html
@@ -162,6 +162,7 @@ header h1, header h3 {
       <a href="voiceinput.html">Voice Input Tool</a>
 	  <a href="gltime.html">Get Local time</a>
 	  <a href="tre.html">Bot Trenning</a>
+	  <a href="inventry.html">Stock & Inventry<a/>
     </div>
   </main>
 </body>
@@ -251,4 +252,5 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
