--- a/AI.html
+++ b/AI.html
@@ -110,6 +110,7 @@ header h1, header h3 {
       <li><a href="htedit.html">Code Edit 1</a></li>
 	  <li><a href="codeedit.html">Code Edit 2</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
+	  <li><a href="download.html">Downloads</a></li>
     </ul>
   </nav>
 </header>
@@ -252,6 +253,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
