--- a/AI.html
+++ b/AI.html
@@ -166,6 +166,8 @@ header h1, header h3 {
 	  <a href="inventry.html">Stock & Inventry</a>
     </div>
   </main>
+    <canvas id="particleCanvas"></canvas>
+    <script src="particless.js"></script>
 </body>
 </html>
   <footer>
@@ -253,6 +255,7 @@ header h1, header h3 {
   </style>
 </body>
 </html>
+
 
 
 
