--- a/Collage.html
+++ b/Collage.html
@@ -199,9 +199,11 @@
       filter: drop-shadow(0 0 10px #25D366);
     }
   </style>
-
+    <canvas id="particleCanvas"></canvas>
+    <script src="particless.js"></script>
 </body>
 </html>
+
 
 
 
