Fix HTML structure and improve formatting

--- a/download.html
+++ b/download.html
@@ -216,4 +216,6 @@ header h1, header h3 {
     }
   </style>
 </body>
+    <canvas id="particleCanvas"></canvas>
+    <script src="particless.js"></script>
 </html>
