--- a/download.html
+++ b/download.html
@@ -215,7 +215,10 @@ header h1, header h3 {
       filter: drop-shadow(0 0 10px #25D366);
     }
   </style>
-</body>
+    <canvas id="particleCanvas"></canvas>
+    <script src="particless.js"></script>
+  </body>
     <canvas id="particleCanvas"></canvas>
     <script src="particless.js"></script>
 </html>
+
