--- a/AI.html
+++ b/AI.html
@@ -2,31 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Shiv Computer</title>
+  <title>Shiv Computer - AI Tools</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="SHIV.png">
   <style>
+    /* ✨ Basic Settings ✨ */
     body {
       font-family: Arial;
       margin: 0;
-      background: #e0f7fa;
+      background: #e0f7fa; /* Light Blue Background */
     }
 
+    /* ✨ Canvas Style for Particles (Background) ✨ */
+    #particleCanvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1; 
+      pointer-events: none;
+    }
+
+    /* ✨ Header & Nav Styles ✨ */
     header {
       background: #0072ff;
       color: white;
       padding: 10px;
       text-align: center;
     }
-.logo {
-  width: 80px;    /* Logo छोटा करने के लिए */
-  height: auto;
-  border-radius: 10px; /* Optional – थोड़ा rounded look */
-}
-header h1, header h3 {
-  color: #fff;
-  text-align: left;
-}
+    .logo {
+      width: 80px;
+      height: auto;
+      border-radius: 10px;
+    }
+    header h1, header h3 {
+      color: #fff;
+      text-align: left;
+    }
 
     nav ul {
       list-style: none;
@@ -43,13 +56,17 @@ header h1, header h3 {
       text-decoration: none;
       font-weight: bold;
       padding: 5px 10px;
+      transition: all 0.3s ease;
     }
 
     nav ul li a:hover {
       background-color: #ff0000;
       border-radius: 9px;
+      box-shadow: 0 0 10px #ff0000, 0 0 20px #ff3333, 0 0 40px #ff6666;
+      color: #fff;
     }
 
+    /* ✨ Main Content & AI Buttons ✨ */
     main {
       padding: 40px 20px;
       text-align: center;
@@ -63,7 +80,7 @@ header h1, header h3 {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
-      max-width: 2000px;
+      max-width: 1200px;
       margin: auto;
       padding: 10px;
     }
@@ -77,17 +94,65 @@ header h1, header h3 {
       border-radius: 12px;
       color: #0072ff;
       font-weight: bold;
-      transition: all 0.5s ease;
+      transition: all 0.3s ease; /* Smooth transition */
     }
 
+    /* Glow Effect on Buttons */
     .social-links a:hover {
       background: #facade;
       color: #123524;
+      box-shadow: 0 0 10px #0072ff, 0 0 20px #3399ff, 0 0 40px #66ccff;
+      transform: scale(1.05); /* Slight Zoom */
+    }
+
+    /* ✨ Footer Styles ✨ */
+    footer {
+      background-color: #003d80;
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+      margin-top: 40px;
+      font-size: 15px;
+    }
+
+    .footer-container p {
+      margin: 5px 0;
+    }
+
+    /* ✨ WhatsApp Button Style ✨ */
+    .whatsapp-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      font-size: 16px;
+      transition: transform 0.3s ease, color 0.3s ease;
+      margin-top: 10px;
+    }
+
+    .whatsapp-btn img {
+      width: 30px;
+      height: 30px;
+      transition: transform 0.3s ease;
+    }
+
+    .whatsapp-btn:hover {
+      transform: scale(1.1);
+      color: #25D366;
+      text-shadow: 0 0 10px #25D366, 0 0 20px #25D366;
+    }
+
+    .whatsapp-btn:hover img {
+      transform: rotate(10deg) scale(1.2);
+      filter: drop-shadow(0 0 10px #25D366);
     }
   </style>
 </head>
 <body>
- <header>
+
+<header>
   <div style="display: flex; align-items: center; background: #0072ff; padding:10px;">
     <img src="logo.png" alt="Logo" class="logo">
     <div class="site-info" style="margin-left: 15px;">
@@ -108,16 +173,14 @@ header h1, header h3 {
       <li><a href="gamecenter.html">Game Center</a></li>
       <li><a href="account.html">Accounting</a></li>
       <li><a href="htedit.html">Code Edit 1</a></li>
-	  <li><a href="codeedit.html">Code Edit 2</a></li>
+      <li><a href="codeedit.html">Code Edit 2</a></li>
       <li><a href="https://www.blogger.com/profile/16830436167123469896">Blog</a></li>
-	  <li><a href="download.html">Downloads</a></li>
+      <li><a href="download.html">Downloads</a></li>
     </ul>
   </nav>
 </header>
-  </style>
-</head>
-<body>
-  <main>
+
+<main>
     <h2>AI TOOLS</h2>
     <div class="social-links">
       <a href="https://chatgpt.com/">Chat GPT</a>
@@ -155,108 +218,27 @@ header h1, header h3 {
       <a href="imagetopdf.html">Image to PDF</a>
       <a href="pdfredu.html">PDF Reducer</a>
       <a href="gst.html">GST Calc</a>
-      <a href="candy2.html">Candy Drpo</a>
+      <a href="candy2.html">Candy Drop</a>
       <a href="fpajal.html">Fruit Puzale</a>
       <a href="voiceinput.html">Voice Input Tool</a>
-	  <a href="gltime.html">Get Local time</a>
-	  <a href="tre.html">Bot Trenning</a>
-	  <a href="inventry.html">Stock & Inventry</a>
+      <a href="gltime.html">Get Local time</a>
+      <a href="tre.html">Bot Trenning</a>
+      <a href="inventry.html">Stock & Inventry</a>
     </div>
-  </main>
-</body>
-</html>
-  <footer>
+</main>
+
+<footer>
     <div class="footer-container">
       <p>&copy; 2025 Shiv Computer. All rights reserved.</p>
       <p>📍 27,Karnpur, Uttar Pradesh-225304 | 📞 +91-80901 53304 | ✉️ ceshivkumar@gmail.com</p>
-      <a aria-label="Chat on WhatsApp" 
-   href="https://wa.me/80901553043?text=Hello%20Shiv!" 
-   class="whatsapp-btn">
-  <img alt="WhatsApp" src="wlogo.png" />
-  <span>WhatsApp</span>
-</a>
-
-<style>
-  .whatsapp-btn {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-    text-decoration: none;
-    color: white; /* Default text color white */
-    font-weight: bold;
-    font-size: 16px;
-    transition: transform 0.3s ease, color 0.3s ease;
-  }
-
-  .whatsapp-btn img {
-    width: 8mm;   /* Logo width 8mm */
-    height: 8mm;  /* Logo height 8mm */
-    transition: transform 0.3s ease;
-  }
-
-  .whatsapp-btn:hover {
-    transform: scale(1.1);  /* Zoom-in effect */
-    color: #25D366; /* WhatsApp green on hover */
-  }
-
-  .whatsapp-btn:hover img {
-    transform: rotate(10deg) scale(1.2); /* Icon rotate + zoom */
-  }
-</style>
-
+      
+      <a aria-label="Chat on WhatsApp" href="https://wa.me/80901553043?text=Hello%20Shiv!" class="whatsapp-btn">
+        <img alt="WhatsApp" src="wlogo.png" />
+        <span>WhatsApp</span>
+      </a>
     </div>
-  </footer>
-
-  <style>
-    footer {
-      background-color: #003d80;
-      color: white;
-      text-align: center;
-      padding: 20px 10px;
-      margin-top: 40px;
-      font-size: 15px;
-    }
-
-    .footer-container p {
-      margin: 5px 0;
-    }
-  </style>
-  <!-- 🔥 Glow Hover Effects -->
-  <style>
-    nav ul li a:hover {
-      background-color: #ff0000;
-      border-radius: 9px;
-      box-shadow: 0 0 10px #ff0000, 0 0 20px #ff3333, 0 0 40px #ff6666;
-      color: #fff;
-    }
-
-    .social-links a:hover {
-      background: #facade;
-      color: #123524;
-      box-shadow: 0 0 10px #0072ff, 0 0 20px #3399ff, 0 0 40px #66ccff;
-      transform: scale(2.05);
-    }
-
-    .whatsapp-btn:hover {
-      transform: scale(2.1);
-      color: #25D366;
-      text-shadow: 0 0 10px #25D366, 0 0 20px #25D366;
-    }
-
-    .whatsapp-btn:hover img {
-      transform: rotate(10deg) scale(1.2);
-      filter: drop-shadow(0 0 10px #25D366);
-    }
-  </style>
+</footer>
+<canvas id="particleCanvas"></canvas>
+<script src="particless.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
