--- a/download.html
+++ b/download.html
@@ -126,6 +126,8 @@ header h1, header h3 {
       <a href="https://www.dropbox.com/scl/fi/jifavrqn9m74t1pqyf6fc/inv.exe?rlkey=78dlh78pyi9coicl672fq7sp3&st=u035z3jw&dl=1">Shop Inventry</a>
       <a href="https://www.dropbox.com/scl/fi/vvfqkgod6cv4z7yos8mch/picedit.exe?rlkey=ba6zwrinmhgkytl8k2neegrjh&st=wi92asj9&dl=1">Picture and ID print</a>
       <a href="https://www.dropbox.com/scl/fi/svccn4jy14oq4hwxg1v1a/Shiv.apk?rlkey=vsti9l3zpoibsm0ys4z53seie&st=53zgp936&dl=1">APK</a>
+      <a href="https://www.dropbox.com/scl/fi/js3t8h7rl4v5ng1ejx4g6/locker.exe?rlkey=t5rxd4fyp5kwb3zrmf38gd7ht&st=3weznyx9&dl=1">File and FolderLocker 1</a>
+      <a href="https://www.dropbox.com/scl/fi/dargb1tc4c0s2i51tzk7c/locker005.exe?rlkey=q1uci68cz0notalsbgwboyfmg&st=cltgd7cq&dl=1">File and Folder Locker Advance</a>
     </div>
   </main>
 
@@ -219,5 +221,6 @@ header h1, header h3 {
     <script src="particless.js"></script>
   </body>
 </html>
+
 
 
