--- a/Collage.html
+++ b/Collage.html
@@ -91,6 +91,8 @@
         <li><a href="Collage.html">College</a></li>
         <li><a href="https://www.dropbox.com/scl/fi/svccn4jy14oq4hwxg1v1a/Shiv.apk?rlkey=vsti9l3zpoibsm0ys4z53seie&st=q3n4zc18&dl=1">APP</a></li>
         <li><a href="Photo.html">Photo</a></li>
+        <li><a href="https://sites.google.com/view/sdmbgic1-/home">SDMBGIC</a></li>
+        <li><a href="https://drive.google.com/file/d/1oUpunz9t0dB-2E3SN9mo7Jw6JwgdYo3Z/view">अवकाश सूची</a></li>
         <li><a href="AI.html">AI</a></li>
       </ul>
     </nav>
@@ -202,6 +204,7 @@
 
 </body>
 </html>
+
 
 
 
