--- a/Collage.html
+++ b/Collage.html
@@ -123,6 +123,8 @@
       <a href="https://inspireawards-dst.gov.in//">Inspire MANAK</a>
       <a href="https://www.rte25.upsdc.gov.in/Index.aspx">RTE</a>
       <a href="https://pfms.nic.in/static/NewLayoutCommonContent.aspx?RequestPagename=static/KnowYourPayment_new.aspx">भुगतान स्थिति</a>
+      <a href="cmark.html">Creat Marksheet</a>
+      <a href="presenty.html">उपस्थिति गणना</a>
     </div>
   </main>
 
@@ -204,6 +206,7 @@
 
 </body>
 </html>
+
 
 
 
