--- a/download.html
+++ b/download.html
@@ -128,6 +128,8 @@ header h1, header h3 {
       <a href="https://www.dropbox.com/scl/fi/svccn4jy14oq4hwxg1v1a/Shiv.apk?rlkey=vsti9l3zpoibsm0ys4z53seie&st=53zgp936&dl=1">APK</a>
       <a href="https://www.dropbox.com/scl/fi/js3t8h7rl4v5ng1ejx4g6/locker.exe?rlkey=t5rxd4fyp5kwb3zrmf38gd7ht&st=3weznyx9&dl=1">File and FolderLocker 1</a>
       <a href="https://www.dropbox.com/scl/fi/dargb1tc4c0s2i51tzk7c/locker005.exe?rlkey=q1uci68cz0notalsbgwboyfmg&st=cltgd7cq&dl=1">File and Folder Locker Advance</a>
+      <a href="https://www.dropbox.com/scl/fi/g2xmq4s29171f2nw93hd2/feebook002.exe?rlkey=gvuwyvgewq1mescgksgezecbi&st=6gxfbfuk&dl=1">Fee Maneger V1</a>
+      <a href="https://www.dropbox.com/scl/fi/djqnu692qwy4ys854guzj/feebook003.exe?rlkey=4e330x68zggj0mvbtvkk0oowg&st=kecsfwgr&dl=2">Fee Maneger V2</a>
     </div>
   </main>
 
@@ -218,9 +220,10 @@ header h1, header h3 {
     }
   </style>
     <canvas id="particleCanvas"></canvas>
-    <script src="particless.js"></script>
+    <script src="particless.js"></s>
   </body>
 </html>
+
 
 
 
