Fix HTML encoding issues in download.html

--- a/download.html
+++ b/download.html
@@ -129,7 +129,8 @@ header h1, header h3 {
       <a href="https://www.dropbox.com/scl/fi/js3t8h7rl4v5ng1ejx4g6/locker.exe?rlkey=t5rxd4fyp5kwb3zrmf38gd7ht&st=3weznyx9&dl=1">File and FolderLocker 1</a>
       <a href="https://www.dropbox.com/scl/fi/dargb1tc4c0s2i51tzk7c/locker005.exe?rlkey=q1uci68cz0notalsbgwboyfmg&st=cltgd7cq&dl=1">File and Folder Locker Advance</a>
       <a href="https://www.dropbox.com/scl/fi/g2xmq4s29171f2nw93hd2/feebook002.exe?rlkey=gvuwyvgewq1mescgksgezecbi&st=6gxfbfuk&dl=1">Fee Maneger V1</a>
-      <a href="https://www.dropbox.com/scl/fi/djqnu692qwy4ys854guzj/feebook003.exe?rlkey=4e330x68zggj0mvbtvkk0oowg&st=kecsfwgr&dl=2">Fee Maneger V2</a>
+      <a href="https://www.dropbox.com/scl/fi/djqnu692qwy4ys854guzj/feebook003.exe?rlkey=4e330x68zggj0mvbtvkk0oowg&st=kecsfwgr&dl=1">Fee Maneger V2</a>
+      <a href="https://www.dropbox.com/scl/fi/d162tgdigt7ydl89dy0wu/Fee.msi?rlkey=m1m6kc0qmztscb2hcuhhxbphs&st=svwogc2v&dl=1">Fee Maneger Advance</a>
     </div>
   </main>
 
@@ -223,6 +224,7 @@ header h1, header h3 {
     <script src="particless.js"></s>
   </body>
 </html>
+
 
 
 
