--- a/download.html
+++ b/download.html
@@ -130,7 +130,7 @@ header h1, header h3 {
       <a href="https://www.dropbox.com/scl/fi/dargb1tc4c0s2i51tzk7c/locker005.exe?rlkey=q1uci68cz0notalsbgwboyfmg&st=cltgd7cq&dl=1">File and Folder Locker Advance</a>
       <a href="https://www.dropbox.com/scl/fi/g2xmq4s29171f2nw93hd2/feebook002.exe?rlkey=gvuwyvgewq1mescgksgezecbi&st=6gxfbfuk&dl=1">Fee Maneger V1</a>
       <a href="https://www.dropbox.com/scl/fi/djqnu692qwy4ys854guzj/feebook003.exe?rlkey=4e330x68zggj0mvbtvkk0oowg&st=kecsfwgr&dl=1">Fee Maneger V2</a>
-      <a href="https://www.dropbox.com/scl/fi/d162tgdigt7ydl89dy0wu/Fee.msi?rlkey=m1m6kc0qmztscb2hcuhhxbphs&st=svwogc2v&dl=1">Fee Maneger Advance</a>
+      <a href="https://www.dropbox.com/scl/fi/i6s2oqxas74iijlbzvpk8/FeesM.msi?rlkey=sx0axgf24jpndzuqriv4w2hx7&st=rzkva4ks&dl=1">Fee Maneger Advance</a>
     </div>
   </main>
 
@@ -224,6 +224,7 @@ header h1, header h3 {
     <script src="particless.js"></s>
   </body>
 </html>
+
 
 
 
