--- a/AI.html
+++ b/AI.html
@@ -216,6 +216,7 @@
       <a href="carg.html">Super Car</a>
       <a href="pdftojpeg.html">Pdf to JPEG</a>
       <a href="imagetopdf.html">Image to PDF</a>
+      <a hreg="imgetoico.html">ImageICO</a>
       <a href="pdfredu.html">PDF Reducer</a>
       <a href="gst.html">GST Calc</a>
       <a href="candy2.html">Candy Drop</a>
@@ -241,4 +242,5 @@
 
 </body>
 </html>
+
 
