--- a/imgToICO.html
+++ b/imgToICO.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image to ICO Converter</title>
+    <link rel="icon" type="image/png" href="SHIV.png">
     <style>
         /* Animated Background */
         body {
@@ -240,4 +241,5 @@
 </script>
 
 </body>
+
 </html>
