Fix HTML encoding issues in AI.html

--- a/AI.html
+++ b/AI.html
@@ -215,7 +215,7 @@
       <a href="coun.html">Live Counting</a>
       <a href="carg.html">Super Car</a>
       <a href="pdftojpeg.html">Pdf to JPEG</a>
-      <a href="imagetopdf.html">Image to PDF</a>
+      <a href="imgToICO.html">Image to PDF</a>
       <a hreg="imgetoico.html">ImageICO</a>
       <a href="pdfredu.html">PDF Reducer</a>
       <a href="gst.html">GST Calc</a>
@@ -242,5 +242,6 @@
 
 </body>
 </html>
+
 
 
