--- a/AI.html
+++ b/AI.html
@@ -216,7 +216,7 @@
       <a href="carg.html">Super Car</a>
       <a href="pdftojpeg.html">Pdf to JPEG</a>
       <a href="imgToICO.html">Image to PDF</a>
-      <a hreg="imgetoico.html">ImageICO</a>
+      <a href="imgetoico.html">ImageICO</a>
       <a href="pdfredu.html">PDF Reducer</a>
       <a href="gst.html">GST Calc</a>
       <a href="candy2.html">Candy Drop</a>
@@ -242,6 +242,7 @@
 
 </body>
 </html>
+
 
 
 
