Fix HTML encoding issues in Collage.html

--- a/Collage.html
+++ b/Collage.html
@@ -108,6 +108,7 @@
       <a href="https://youtube.com/@ershivkumar?si=aAvVxJnHXo2Ur1b_">📹 YouTube</a>
       <a href="mailto:ceshiv.1989@8gync0.onmicrosoft.com">📧 Email Us</a>
       <a href="https://sites.google.com/view/shivcomputer/home">🌐SHIV COMPUTER</a>
+      <a href=https://schoollogin.upmsp.edu.in/>School Login</a>
       <a href="https://preregistration.upmsp.edu.in/">कक्षा 09 और 11 रजिस्ट्रेशन</a>
       <a href="https://examregistration.upmsp.edu.in/">कक्षा 10 और 12 रजिस्ट्रेशन</a>
       <a href="https://attendance.upmsp.edu.in/">छात्र उपस्थिति</a>
@@ -206,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
