Fix HTML structure and formatting issues

--- a/download.html
+++ b/download.html
@@ -132,6 +132,7 @@ header h1, header h3 {
       <a href="https://www.dropbox.com/scl/fi/djqnu692qwy4ys854guzj/feebook003.exe?rlkey=4e330x68zggj0mvbtvkk0oowg&st=kecsfwgr&dl=1">Fee Maneger V2</a>
       <a href="https://www.dropbox.com/scl/fi/i6s2oqxas74iijlbzvpk8/FeesM.msi?rlkey=sx0axgf24jpndzuqriv4w2hx7&st=rzkva4ks&dl=1">Fee Maneger Advance</a>
       <a href="https://drive.google.com/drive/folders/14Mdjag7ftexiMbqnGk2QBtygm1gdh15E?usp=sharing">All Version Fee Maneger</a>
+      <a href="https://www.dropbox.com/scl/fi/4odr5v1jaeeaqjkz7krhg/dsc.exe?rlkey=hbktrn1nqphjcs8uvsbpt7koi&st=9b0oixte&dl=1">Auto DSC Setup</a>
     </div>
   </main>
 
@@ -225,6 +226,7 @@ header h1, header h3 {
     <script src="particless.js"></s>
   </body>
 </html>
+
 
 
 
